force-app/main/default/objects/Dipl_me__c/Dipl_me__c.object-meta.xml
<CustomObject>
    <label>Diplômes EMLYON</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Numéro automatique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diplômes EMLYON</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>