force-app/main/default/objects/Dipl_me__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Programme__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Management Programme</fullName>
            </value>
            <value>
                <fullName>CPA Lyon</fullName>
            </value>
            <value>
                <fullName>European Master in Management</fullName>
            </value>
            <value>
                <fullName>Executive MBA</fullName>
            </value>
            <value>
                <fullName>Executive MBA BUPT</fullName>
            </value>
            <value>
                <fullName>Global Bachelor in Business Administration</fullName>
            </value>
            <value>
                <fullName>Global Doctorate of Business Administration</fullName>
            </value>
            <value>
                <fullName>Global Entrepreneurship Programme</fullName>
            </value>
            <value>
                <fullName>International MBA</fullName>
            </value>
            <value>
                <fullName>MS Acheteur Manager International</fullName>
            </value>
            <value>
                <fullName>MS Agro-Industriel</fullName>
            </value>
            <value>
                <fullName>MS Audit et Information Financière</fullName>
            </value>
            <value>
                <fullName>MS Business Management et Transformation Digitale</fullName>
            </value>
            <value>
                <fullName>MSc Finance Afrique</fullName>
            </value>
            <value>
                <fullName>MSc in Cybersecurity &amp; Defense Management</fullName>
            </value>
            <value>
                <fullName>MSc in Global Innovation &amp; Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>MSc in High-End Brand Management</fullName>
            </value>
            <value>
                <fullName>MSc in Innovation,Design,Entrep. &amp; Arts</fullName>
            </value>
            <value>
                <fullName>Msc in Sports Industry Management</fullName>
            </value>
            <value>
                <fullName>MSc in Strategy &amp; Consulting</fullName>
            </value>
            <value>
                <fullName>MSc in Supply Chain &amp; Purchasing Management</fullName>
            </value>
            <value>
                <fullName>MSc Luxury Mngt &amp; Mkt</fullName>
            </value>
            <value>
                <fullName>MS Conseil en Organisation</fullName>
            </value>
            <value>
                <fullName>MS Entreprendre</fullName>
            </value>
            <value>
                <fullName>MS Entrepreneuriat et Management de l&apos;Innovation</fullName>
            </value>
            <value>
                <fullName>MS Finance de Marché</fullName>
            </value>
            <value>
                <fullName>MS GIRIS</fullName>
            </value>
            <value>
                <fullName>MS Ingénierie et Internet</fullName>
            </value>
            <value>
                <fullName>MS Ingénierie et Mngt des SI</fullName>
            </value>
            <value>
                <fullName>MS Ingénierie Financière</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>