force-app/main/default/objects/Dipl_me__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <label>Programme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Management Programme</fullName>
            </value>
            <value>
                <fullName>CPA Lyon</fullName>
            </value>
            <value>
                <fullName>ESC Lyon</fullName>
            </value>
            <value>
                <fullName>European Master in Management</fullName>
            </value>
            <value>
                <fullName>Faculté</fullName>
            </value>
            <value>
                <fullName>Global Bachelor in Business Administration</fullName>
            </value>
            <value>
                <fullName>Global Doctorate of Business Administration</fullName>
            </value>
            <value>
                <fullName>Global Entrepreneurship Program</fullName>
            </value>
            <value>
                <fullName>Mastères Spécialisés</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MSc Finance</fullName>
            </value>
            <value>
                <fullName>MSc in</fullName>
            </value>
            <value>
                <fullName>MSc in Cybersecurity &amp; Defense Management</fullName>
            </value>
            <value>
                <fullName>MSc in Digital Marketing and Data Science</fullName>
            </value>
            <value>
                <fullName>MSc in High-End Brand Management</fullName>
            </value>
            <value>
                <fullName>MSc in Innovation,Design,Entrep. &amp; Arts</fullName>
            </value>
            <value>
                <fullName>MSc in International Hospitality Management</fullName>
            </value>
            <value>
                <fullName>MSc in Luxury Management et Marketing</fullName>
            </value>
            <value>
                <fullName>Msc in Sports Industry Management</fullName>
            </value>
            <value>
                <fullName>Programme Général de Management</fullName>
            </value>
            <value>
                <fullName>Programme Grande Ecole</fullName>
            </value>
            <value>
                <fullName>Programme Grande Ecole - European Triple Degree</fullName>
            </value>
            <value>
                <fullName>Programme Grande Ecole - Parcours Business Mediation</fullName>
            </value>
            <value>
                <fullName>Programme Grande Ecole - Parcours I.D.E.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>