force-app/main/default/objects/Dipl_me__c/fields/Promo_d_entr_e__c.field-meta.xml
<CustomField>
    <fullName>Promo_d_entr_e__c</fullName>
    <label>Promo d&apos;entrée</label>
    <length>4</length>
    <type>Text</type>
</CustomField>