force-app/main/default/objects/Dipl_me__c/fields/Promo_de_sortie__c.field-meta.xml
<CustomField>
    <fullName>Promo_de_sortie__c</fullName>
    <label>Promo de sortie</label>
    <length>4</length>
    <type>Text</type>
</CustomField>