force-app/main/default/objects/Dipl_me__c/fields/Rang_dipl_me__c.field-meta.xml
<CustomField>
    <fullName>Rang_dipl_me__c</fullName>
    <label>Rang diplôme</label>
    <length>4</length>
    <type>Text</type>
</CustomField>