force-app/main/default/objects/Dipl_me__c/fields/Reussi__c.field-meta.xml
<CustomField>
    <fullName>Reussi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réussi</label>
    <type>Checkbox</type>
</CustomField>