force-app/main/default/objects/Dipl_me__c/fields/Sous_promo__c.field-meta.xml
<CustomField>
    <fullName>Sous_promo__c</fullName>
    <label>Sous promo</label>
    <length>4</length>
    <type>Text</type>
</CustomField>