force-app/main/default/objects/Dipl_me__c/fields/x18caractere__c.field-meta.xml
<CustomField>
    <fullName>x18caractere__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x18caractere</label>
    <type>Text</type>
</CustomField>