force-app/main/default/objects/Dipl_me__c/listViews/ctrl_attribution_diplome.listView-meta.xml
<ListView>
    <fullName>ctrl_attribution_diplome</fullName>
    <columns>Contact__c</columns>
    <columns>Programme__c</columns>
    <columns>Cycle__c</columns>
    <columns>Promo_d_entr_e__c</columns>
    <columns>Promo_de_sortie__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promo_de_sortie__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>ctrl attribution diplome</label>
    <language>fr</language>
</ListView>