force-app/main/default/objects/Dipl_me__c/listViews/Tous_les_dipl_mes.listView-meta.xml
<ListView>
    <fullName>Tous_les_dipl_mes</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Programme__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme__c</field>
        <operation>contains</operation>
        <value>MBA</value>
    </filters>
    <label>Tous les diplômes</label>
</ListView>